# benchmark_spatial_interpolation

./: .gitignore  README.md  benchmark.sh  example.json  final_report.aux  final_report.qmd  final_report.tex  final_report_andrea.qmd  init.sh  install_ExaGeoStatCPP.sh  pyproject.toml  quickstart-sklearn.ipynb  references.bib  report.qmd  report.sh  report_rod.qmd  test.txt
1_Data_creation/1_Real_datasets/: 1_Import_BDALTI_data.py  2_Process_BDALTI_data.py  3_Import_RGE_data.py  4_Process_RGEALTI_data.py  housing_data.py
1_Data_creation/2_Synthetic_datasets/: 3_generation_benchmark.py  generate_synthetic_noisy.py
2_Model_training/: 1_draft.py  Hyperparameters_CV.ipynb  benchmark.py  benchmark_all.py  benchmark_large.py  benchmark_rod.py  benchmark_small.py  matteo.py  migbt.py  mymodel.py  resume  run_idw.py  run_knn.py
2_Model_training/MI-GBT/: load_spatialdata.py  sa_utils.py
2_Model_training/paper_1/: data_test.py  real.py  test_2.py  test_3.py
2_Model_training/spaitalheight/: interpolation.py  main.py  main_rf.py  main_xgb.py  map.py  params_gc.json  params_nl.json  random_forest_tuning.py
2_Model_training/spatialInterpolation/: Spatial Interpolation of Rainfall using Kriging vs Machine Learning (Synthetic Data)  prove.py
2_Model_training/utils/: gam_wrapper.py  kriging_wrapper.py  migbt.py  patch_treeple.py  s3.py
AMR/: rapport.qmd
AMR/Algorithm_A/: MIBooster.py  main_mbi.py  utils.py
AMR/Algorithm_B_C/: main_rf.py  main_xgb.py  map.py  random_forest.py
AMR/output/: map.py
geoRF/geoRF/: _main.py  _tree.py
utils/: functions.py  s3.py
