[project]
name = "benchmark-ensemble-methods-spatial-interpolation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gdal[numpy]==3.11.3",
    "gstools>=1.7.0",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "mlflow>=3.6.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "py7zr>=1.0.0",
    "pyarrow>=21.0.0",
    "pyinterpolate>=1.2.0",
    "pykrige>=1.7.3",
    "pyproj>=3.7.2",
    "rasterio>=1.4.3",
    "requests>=2.32.5",
    "rioxarray>=0.20.0",
    "s3fs>=2025.9.0",
    "scikit-learn-intelex>=2025.9.0",
    "setuptools>=80.9.0",
    "skranger>=0.8.0",
    "startinpy>=0.12.2",
    "wheel>=0.45.1",
    "xarray>=2025.11.0",
    "xgboost>=3.1.2",
]
