[project]
name = "benchmark-ensemble-methods-spatial-interpolation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "distgfs>=1.2.0",
    "gdal[numpy]==3.8.4",
    "geostatspy>=0.0.79",
    "gstools>=1.7.0",
    "libpysal>=4.14.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "mlflow>=3.6.0",
    "numba>=0.63.1",
    "numpy>=2.0.0",
    "pandas>=2.3.3",
    "plotnine>=0.15.2",
    "polars>=1.34.0",
    "py7zr>=1.0.0",
    "pyarrow>=21.0.0",
    "pyinterpolate>=1.2.1",
    "rasterio>=1.4.3",
    "requests>=2.32.5",
    "s3fs>=2025.9.0",
    "scikit-learn-intelex>=2025.9.0",
    "setuptools>=80.9.0",
    "spatialize==1.0.2",
    "tfinterpy>=1.1.1",
    "wheel>=0.45.1",
    "xgboost>=3.1.2",
    "geopandas>=0.14.4",
    "joblib>=1.4.0",
    "mpi4py>=3.1.0",
    "scipy>=1.13.0",
    "tqdm>=4.66.4",
    "urllib3>=2.2.1",
    "pykrige>=1.7.0",
    "scikit-gstat>=1.0.0",
    "pygam>=0.9.0",
    "scikit-learn>=1.5.2", 
    "treeple>=0.10.3" 
]
